<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Theme.AppCompat.DayNight.NoActionBar"
    android:background="@drawable/product"
    tools:context=".product.ProductFragment">

    <!-- TODO: Update blank fragment layout -->
   <de.hdodenhof.circleimageview.CircleImageView
       android:layout_width="96dp"
       android:layout_height="96dp"
       android:id="@+id/profile"

       android:layout_margin="16dp"
       app:civ_border_width="2dp"
       android:src="@drawable/logo1"
       android:layout_alignParentEnd="true"
       app:civ_border_color="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        android:layout_marginStart="4dp"
        android:text="@string/choose_the_food_you_love"
        android:layout_marginTop="150dp"
        tools:ignore="RelativeOverlap" />

    <EditText
        android:id="@+id/search"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:background="@drawable/shapes"
        android:hint="@string/search_food_item"
        android:textColorHint="@color/black"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/black" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categories"
        android:textSize="20sp"
        android:id="@+id/category"
        android:layout_marginStart="4dp"
       android:layout_marginTop="220dp"
        tools:ignore="RelativeOverlap" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_search"
        android:text="@string/search"
        android:background="@drawable/shapes"
        android:layout_marginTop="230dp"
        android:layout_marginStart="150dp"
        tools:ignore="RelativeOverlap" />


    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="300dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <GridLayout
                android:id="@+id/grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="5"

                tools:ignore="UselessParent">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_row="0"
                    android:id="@+id/card"
                    android:layout_rowWeight="1"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_margin="8dp"
                    android:padding="4dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:id="@+id/fries"
                            android:background="@color/card"
                        android:focusable="true"
                        android:layout_gravity="center"
                        android:contentDescription="@string/fries"
                        android:src="@drawable/eight"
                        app:civ_border_color="@color/black"
                        app:civ_border_width="2dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fries"
                        android:id="@+id/one"
                        android:layout_gravity="bottom|center_horizontal"/>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="160dp"
                    android:id="@+id/card1"
                    android:background="@color/card"
                    android:layout_height="160dp"
                    android:layout_row="0"
                    android:layout_rowWeight="1"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="8dp"
                    android:padding="4dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="98dp"
                        android:layout_height="102dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/fries"
                        android:src="@drawable/eight"
                        app:civ_border_color="@color/black"
                        app:civ_border_width="2dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fries"
                        android:id="@+id/two"
                        android:layout_gravity="bottom|center_horizontal"
                       />
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="160dp"
                    android:id="@+id/card3"
                    android:layout_height="160dp"
                    android:layout_row="1"
                    android:background="@color/card"
                    android:layout_rowWeight="1"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="8dp"
                    android:padding="4dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/fries"
                        android:src="@drawable/eight"
                        app:civ_border_color="@color/black"
                        app:civ_border_width="2dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fries"
                        android:layout_gravity="bottom|center_horizontal"
                        />
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_row="1"
                    android:background="@color/card"
                    android:layout_rowWeight="1"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_margin="8dp"
                    android:padding="4dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="96dp"
                        android:id="@+id/card2"
                        android:layout_height="96dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/fries"
                        android:src="@drawable/eight"
                        app:civ_border_color="@color/black"
                        app:civ_border_width="2dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fries"
                        android:layout_gravity="bottom|center_horizontal"
                        />
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_row="2"
                    android:background="@color/card"
                    android:id="@+id/card5"
                    android:layout_rowWeight="1"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="8dp"
                    android:padding="4dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/fries"
                        android:src="@drawable/eight"
                        app:civ_border_color="@color/black"
                        app:civ_border_width="2dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fries"
                        android:layout_gravity="bottom|center_horizontal"
                       />
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="160dp"
                    android:id="@+id/card4"
                    android:layout_height="160dp"
                    android:layout_row="2"
                    android:layout_rowWeight="1"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_margin="8dp"
                    android:padding="4dp"
                    android:background="@color/card"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/fries"
                        android:src="@drawable/eight"
                        app:civ_border_color="@color/black"
                        app:civ_border_width="2dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fries"
                        android:layout_gravity="bottom|center_horizontal"
                        android:id="@+id/name3"/>
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_row="3"
                    android:layout_rowWeight="0"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="8dp"
                    android:padding="4dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/fries"
                        android:src="@drawable/eight"
                        app:civ_border_color="@color/black"
                        app:civ_border_width="2dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fries"
                        android:layout_gravity="bottom|center_horizontal"
                        android:id="@+id/name2"/>
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_row="3"
                    android:id="@+id/card6"
                    android:layout_rowWeight="1"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="8dp"
                    android:padding="4dp"
                    android:background="@color/card"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/fries"
                        android:src="@drawable/eight"
                        app:civ_border_color="@color/black"
                        app:civ_border_width="2dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fries"
                        android:layout_gravity="bottom|center_horizontal"
                        android:id="@+id/name1"/>
                </com.google.android.material.card.MaterialCardView>


            </GridLayout>


        </LinearLayout>
    </ScrollView>


</RelativeLayout>
</layout>